app/landing.css
#wrapper {
  /* aspect-ratio: 1.618; */
  width: 100vmin;
  position: relative;
  height: 38rem;
}

#wrapper > .shape {
  height: 30%;
  width: 30%;
  background-color: rgba(255 255 255 / 5%);
  position: absolute;
  transition: left, top, height, width, border-radius;
  transition-duration: 750ms;
  transition-timing-function: ease-in-out;
}

@keyframes scaleIn {
  0% {
    /* transform: translateX(-100%); */
    scale: 0;
  }
  100% {
    /* transform: translateX(0); */
    scale: 1;
  }
}

#wrapper > .shape:nth-child(1) {
  background-color: #9bce51;
  z-index: 2;
  animation: 200ms ease-out 0s 1 scaleIn;
}

#wrapper > .shape:nth-child(2) {
  background-color: #ffe31b;
  z-index: 2;
  animation: 1000ms ease-in-out 0s 1 scaleIn;
}

#wrapper > .shape:nth-child(3) {
  background-color: #0a0a0a;
  z-index: 1;
  animation: 500ms ease-in-out 0s 1 scaleIn;
}

#wrapper > .shape:nth-child(4) {
  background-color: #65bc4d;
  z-index: 2;
  animation: 800ms ease-in-out 0s 1 scaleIn;
}

#wrapper > .shape:nth-child(5) {
  background-color: #cdcccc;
  z-index: 2;
  animation: 400ms ease-in-out 0s 1 scaleIn;
}

#wrapper > .shape:nth-child(6) {
  background-color: #2157a4;
  z-index: 2;
  animation: 800ms ease-in-out 0s 1 scaleIn;
}

#wrapper > .shape:nth-child(7) {
  background-color: #85cef1;
  z-index: 2;
  animation: 900ms ease-in-out 0s 1 scaleIn;
}

#wrapper[data-configuration="1"] > .shape:nth-child(1) {
  left: 0%;
  top: 0%;
  height: 50%;
  width: 20%;
}

#wrapper[data-configuration="1"] > .shape:nth-child(2) {
  left: 20%;
  top: 0%;
  height: 50%;
  width: 30%;
}

#wrapper[data-configuration="1"] > .shape:nth-child(3) {
  left: 50%;
  top: 0%;
  height: 100%;
  width: 50%;
}

#wrapper[data-configuration="1"] > .shape:nth-child(4) {
  left: 0%;
  top: 50%;
  height: 50%;
  width: 30%;
}

#wrapper[data-configuration="1"] > .shape:nth-child(5) {
  left: 30%;
  top: 50%;
  height: 50%;
  width: 20%;
}

#wrapper[data-configuration="1"] > .shape:nth-child(6) {
  left: 70%;
  top: 50%;
  height: 50%;
  width: 30%;
}

#wrapper[data-configuration="1"] > .shape:nth-child(7) {
  left: 85%;
  top: 75%;
  height: 25%;
  width: 15%;
}

#wrapper[data-configuration="2"] > .shape:nth-child(1) {
  left: 25%;
  top: 20%;
  height: 80%;
  width: 15%;
}

#wrapper[data-configuration="2"] > .shape:nth-child(2) {
  left: 40%;
  top: 20%;
  height: 50%;
  width: 10%;
}

#wrapper[data-configuration="2"] > .shape:nth-child(3) {
  left: 50%;
  top: 0%;
  height: 100%;
  width: 25%;
}

#wrapper[data-configuration="2"] > .shape:nth-child(4) {
  left: 0%;
  top: 0%;
  height: 50%;
  width: 10%;
}

#wrapper[data-configuration="2"] > .shape:nth-child(5) {
  left: 10%;
  top: 0%;
  height: 70%;
  width: 15%;
}

#wrapper[data-configuration="2"] > .shape:nth-child(6) {
  left: 75%;
  top: 10%;
  height: 80%;
  width: 15%;
}

#wrapper[data-configuration="2"] > .shape:nth-child(7) {
  left: 90%;
  top: 40%;
  height: 60%;
  width: 10%;
}

#wrapper[data-configuration="3"] > .shape:nth-child(1) {
  left: 0%;
  top: 16.5%;
  height: 32%;
  width: 20%;
}

#wrapper[data-configuration="3"] > .shape:nth-child(2) {
  left: 20%;
  top: 2.7%;
  height: 55%;
  width: 34%;
}

#wrapper[data-configuration="3"] > .shape:nth-child(3) {
  left: 38%;
  top: 0%;
  height: 100%;
  width: 62%;
}

#wrapper[data-configuration="3"] > .shape:nth-child(4) {
  left: 0%;
  top: 47.3%;
  height: 55%;
  width: 34%;
}

#wrapper[data-configuration="3"] > .shape:nth-child(5) {
  left: 34%;
  top: 56.4%;
  height: 32%;
  width: 20%;
}

#wrapper[data-configuration="3"] > .shape:nth-child(6) {
  left: 66%;
  top: 45%;
  height: 55%;
  width: 34%;
}

#wrapper[data-configuration="3"] > .shape:nth-child(7) {
  left: 80%;
  top: 68%;
  height: 32%;
  width: 20%;
}

#wrapper[data-roundness="1"] > .shape {
  border-radius: 6rem;
}

#wrapper[data-roundness="2"] > .shape {
  border-radius: 0rem;
}

#wrapper[data-roundness="3"] > .shape {
  border-radius: 30rem;
}

#wrapper[data-roundness="4"] > .shape:nth-child(1) {
  border-bottom-left-radius: 10rem;
}

#wrapper[data-roundness="4"] > .shape:nth-child(2) {
  border-radius: 20rem;
}

#wrapper[data-roundness="4"] > .shape:nth-child(3) {
  border-top-right-radius: 12rem;
}

#wrapper[data-roundness="4"] > .shape:nth-child(4) {
  border-top-right-radius: 10rem;
  border-bottom-right-radius: 10rem;
}

#wrapper[data-roundness="4"] > .shape:nth-child(5) {
  border-bottom-left-radius: 10rem;
}

#wrapper[data-roundness="4"] > .shape:nth-child(6) {
  border-top-left-radius: 16rem;
}

#wrapper[data-roundness="4"] > .shape:nth-child(7) {
  border-top-left-radius: 10rem;
}

#wrapper > .shape:hover {
  background-color: gray;
}

.landing-title {
  margin-top: 0.5rem;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 0.2rem;
  font-weight: 600;
}

.landing-title-wrapper {
  width: 90vmin;
  display: flex;
  justify-content: end;
}

@media (max-width: 600px) {
  #wrapper {
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    aspect-ratio: 1.018;
    height: unset;
  }

  .landing-title {
    text-decoration: none;
  }
}

@media (max-width: 1100px) {
  #wrapper {
    width: 90vmin;
  }
}

